--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Titillium+Web&display=swap" rel="stylesheet">
@@ -95,20 +96,22 @@
 
     
     <!-- Footer -->
-    <footer class="textoCentrado justificarBE footerRegistro">
-        <div>
-            <a href="./index.html#inicio"><img src="img/logo.png" alt="logo"></a>
-            <p>Todos los derechos reservados</p>
-        </div>
+    <footer class="textoCentrado container footerRegistro">
+      <div class="row">
+          <div class="col-lg-6 col-md-12">
+              <a href="#inicio"><img src="img/logo.png" alt="logo"></a>
+              <p>Todos los derechos reservados</p>
+          </div>
+  
+          <div class="col-lg-6 col-md-12">
+              <h3>Seguinos en nuestra redes</h3>
+              <a href="instagram.com" target="_blank"><i class="fa-brands fa-instagram icoInstagram"></i></a>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square icoFacebook"></i></a>
+              <a href="https://www.tiktok.com/es/" target="_blank"><i class="fa-brands fa-tiktok iTikTok"></i></a>
+          </div>
+      </div>
 
-        <div>
-            <h3>Seguinos en nuestra redes</h3>
-            <a href="instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="https://www.tiktok.com/es/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
-        </div>
-
-    </footer>
+  </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
