--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
     <!-- Footer -->
     <footer class="textoCentrado container">
         <div class="row">
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12  align-items-center">
                 <a href="#inicio"><img src="img/logo.png" alt="logo"></a>
                 <p>Todos los derechos reservados</p>
             </div>
 
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 mt-4 align-items-center">
                 <h3>Seguinos en nuestra redes</h3>
                 <a href="instagram.com" target="_blank"><i class="fa-brands fa-instagram icoInstagram"></i></a>
                 <a href="https://www.facebook.com/" target="_blank"><i
